# psp-game-downloader

./: config.json
.github/: funding.yml
client/: package-lock.json
server/: CMakeLists.txt
server/src/controllers/: PSPController.cpp  PSPController.h
server/src/http/: Server.h
server/src/psp/: FileTransfer.h  PSPDevice.h  WinUSBConnection.h
server/src/utils/: config.h  logger.h
